# star-habit

./: star-habit.code-workspace
server/: .env.example  Cargo.toml
server/migrations/: 20260228044249_add_user_table_function.up.sql  20260228044250_add_user_table_users.up.sql  20260228044251_add_user_table_trigger_users.down.sql  20260228044251_add_user_table_trigger_users.up.sql  20260228044252_add_user_table_profiles.up.sql  20260228044253_add_user_table_trigger_profiles.down.sql  20260228044253_add_user_table_trigger_profiles.up.sql  20260228044254_drop_firebase_uid_at_users_table.down.sql  20260228044254_drop_firebase_uid_at_users_table.up.sql  20260228044255_add_auth_method_table.down.sql  20260228044255_add_auth_method_table.up.sql  20260228044256_add_auth_methods_trigger_updated_at.down.sql  20260228044256_add_auth_methods_trigger_updated_at.up.sql  20260303120000_auth_methods_signin_lookup_index.down.sql  20260303120000_auth_methods_signin_lookup_index.up.sql  20260303140000_profiles_username_email_not_null.down.sql  20260303140000_profiles_username_email_not_null.up.sql
server/src/: lib.rs  main.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs
server/src/auth/firebase/: claims.rs  error.rs  keys.rs  mod.rs  verify.rs
server/src/auth/jwt/: claims.rs  config.rs  generate.rs  kind.rs  mod.rs  verified.rs  verify.rs
server/src/config/: env_vars.rs  mod.rs
server/src/models/: auth_method.rs  mod.rs  profile.rs  user.rs
server/src/observability/: telemetry.rs
server/src/routes/: health.rs  index.rs  mod.rs  openapi.rs
server/src/routes/api/: me.rs  (+1 more)
(+88 files in other folders)
